repair bug when popup is on behind there was position absolute, so moved to bottom, and create a new div, so clear that bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1411,7 +1411,22 @@ gap: 5px;
   height: 300px;
 } */
 
-.popup-create-activity,
+.popup-create-activity{
+  
+  width: 420px;
+  background: rgb(5, 5, 150);
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  padding: 30px;
+  border-radius: 15px;
+  backdrop-filter: blur(15px);
+
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
 .popup-edit-activity,
 .popup-delete-activity {
   width: 420px;
